--- a/app/src/main/res/layout/fragment_care_child2.xml
+++ b/app/src/main/res/layout/fragment_care_child2.xml
@@ -1,163 +1,167 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_height="wrap_content"
     tools:context=".fragment.CareChildFragment2">
 
-
-    <TextView
-        android:id="@+id/child2_txt1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="35dp"
-        android:layout_marginTop="30dp"
-        android:fontFamily="@font/notosanscjkkrregular"
-        android:includeFontPadding="false"
-        android:text="@string/string_child2_txt1"
-        android:textColor="@color/textColor_default"
-        android:textSize="@dimen/my_text_size1"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/child2_txt2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="33dp"
-        android:fontFamily="@font/notosanscjkkrregular"
-        android:includeFontPadding="false"
-        android:text="@string/string_child2_txt2"
-        android:textColor="@color/textColor_default_light"
-        android:textSize="@dimen/guide_text_size"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/child2_txt1"
-        app:layout_constraintBottom_toTopOf="@id/intervention_container"/>
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/intervention_container"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="18dp"
-        android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="@id/child2_make_btn"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/child2_txt2">
-
-        <Button
-            android:id="@+id/child2_edit_btn"
-            android:layout_width="50dp"
-            android:layout_height="35dp"
-            android:layout_marginRight="28dp"
-            android:background="@drawable/btn_design"
-            android:stateListAnimator="@null"
-            android:text="변경"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <TextView
-            android:id="@+id/child2_intervention"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="80dp"
-            android:fontFamily="@font/notosanscjkkrmedium"
-            android:includeFontPadding="false"
-            android:text="test"
-            android:textAlignment="center"
-            android:textColor="@color/textColor_blue"
-            android:textSize="@dimen/my_text_size1"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <Button
-        android:id="@+id/child2_make_btn"
-        android:layout_width="180dp"
-        android:layout_height="30dp"
-        android:layout_marginTop="18dp"
-        app:layout_constraintTop_toBottomOf="@id/intervention_container"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:fontFamily="@font/notosanscjkkrregular"
-        android:includeFontPadding="false"
-        android:textColor="@color/textColor_blue"
-        android:textSize="@dimen/my_text_size1"
-        android:stateListAnimator="@null"
-        android:background="@drawable/btn_design_blue"
-        android:text="스트레스 해소방안 만들기"/>
-
     <ScrollView
-        android:id="@+id/child2_txt3_container"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:paddingTop="12dp"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/child2_make_btn"
-        app:layout_constraintBottom_toTopOf="@id/child2_recommend_container">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/child2_switch_container">
 
-        <TextView
-            android:id="@+id/child2_txt3"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="14dp"
-            android:layout_marginBottom="18dp"
-            android:paddingHorizontal="20dp"
-            android:fontFamily="@font/notosanscjkkrlight"
-            android:includeFontPadding="false"
-            android:textAlignment="center"
-            android:textColor="@color/textColor_light"
-            android:textSize="@dimen/my_text_size1"
-            android:visibility="visible" />
-    </ScrollView>
-
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/child2_recommend_container"
-
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="19dp"
-        android:background="@drawable/view_top_border"
-        app:layout_constraintBottom_toTopOf="@id/child2_switch_container"
-        app:layout_constraintTop_toBottomOf="@+id/child2_txt3_container">
-
-        <Button
-            android:id="@+id/child2_load_btn"
-            android:layout_width="140dp"
-            android:layout_height="30dp"
-            android:layout_marginTop="20dp"
-            android:background="@drawable/btn_design"
-            android:drawableLeft="@drawable/ic_refresh_blue_24px"
-            android:fontFamily="@font/notosanscjkkrregular"
-            android:gravity="center"
-            android:includeFontPadding="false"
-            android:stateListAnimator="@null"
-            android:text="다른 추천 보기"
-            android:textColor="@color/textColor_default_light"
-            android:textSize="@dimen/my_text_size1"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/child2_recommend_scroll" />
-
-        <ScrollView
-            android:id="@+id/child2_recommend_scroll"
-            android:layout_width="match_parent"
-            android:layout_height="70dp"
-            app:layout_constraintTop_toBottomOf="@id/child2_txt4">
+            android:layout_height="match_parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/child2_switch_container">
 
             <LinearLayout
+                android:id="@+id/child2_info_container"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginTop="30dp"
+                app:layout_constraintBottom_toTopOf="@id/intervention_container"
                 android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/child2_txt1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="35dp"
+                    android:fontFamily="@font/notosanscjkkrregular"
+                    android:includeFontPadding="false"
+                    android:text="@string/string_child2_txt1"
+                    android:textColor="@color/textColor_default"
+                    android:textSize="@dimen/my_text_size1" />
+
+                <TextView
+                    android:id="@+id/child2_txt2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="33dp"
+                    android:fontFamily="@font/notosanscjkkrregular"
+                    android:includeFontPadding="false"
+                    android:text="@string/string_child2_txt2"
+                    android:textColor="@color/textColor_default_light"
+                    android:textSize="@dimen/guide_text_size" />
+
+            </LinearLayout>
+
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/intervention_container"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="18dp"
+                android:visibility="invisible"
+                app:layout_constraintBottom_toTopOf="@id/child2_make_btn"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/child2_info_container">
+
+                <Button
+                    android:id="@+id/child2_edit_btn"
+                    android:layout_width="50dp"
+                    android:layout_height="35dp"
+                    android:layout_marginRight="28dp"
+                    android:background="@drawable/btn_design"
+                    android:stateListAnimator="@null"
+                    android:text="변경"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:id="@+id/child2_intervention"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="80dp"
+                    android:fontFamily="@font/notosanscjkkrmedium"
+                    android:includeFontPadding="false"
+                    android:text="test"
+                    android:textAlignment="center"
+                    android:textColor="@color/textColor_blue"
+                    android:textSize="@dimen/my_text_size1"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+            <Button
+                android:id="@+id/child2_make_btn"
+                android:layout_width="180dp"
+                android:layout_height="30dp"
+                android:layout_marginTop="18dp"
+                android:background="@drawable/btn_design_blue"
+                android:fontFamily="@font/notosanscjkkrregular"
+                android:includeFontPadding="false"
+                android:stateListAnimator="@null"
+                android:text="스트레스 해소방안 만들기"
+                android:textColor="@color/textColor_blue"
+                android:textSize="@dimen/my_text_size1"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/intervention_container"
+                app:layout_constraintBottom_toTopOf="@id/child2_txt3"/>
+
+            <TextView
+                android:id="@+id/child2_txt3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="14dp"
+                android:layout_marginBottom="18dp"
+                android:fontFamily="@font/notosanscjkkrlight"
+                android:includeFontPadding="false"
+                android:paddingHorizontal="30dp"
+                android:textAlignment="center"
+                android:textColor="@color/textColor_light"
+                android:textSize="@dimen/my_text_size2"
+                android:visibility="visible"
+                app:layout_constraintBottom_toTopOf="@id/child2_recommend_container"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/child2_make_btn" />
+
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/child2_recommend_container"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="19dp"
+                android:background="@drawable/view_top_border"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/child2_txt3">
+
+                <TextView
+                    android:id="@+id/child2_txt4"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="35dp"
+                    android:layout_marginTop="18dp"
+                    android:fontFamily="@font/notosanscjkkrregular"
+                    android:includeFontPadding="false"
+                    android:text="@string/string_child2_txt4"
+                    android:textColor="@color/textColor_default"
+                    android:textSize="@dimen/my_text_size1"
+                    app:layout_constraintBottom_toTopOf="@id/child2_recommend1"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
                     android:id="@+id/child2_recommend1"
@@ -199,27 +203,32 @@
                     android:textSize="@dimen/my_text_size1"
                     app:layout_constraintTop_toBottomOf="@id/child2_recommend2" />
 
-            </LinearLayout>
 
-        </ScrollView>
+                <Button
+                    android:id="@+id/child2_load_btn"
+                    android:layout_width="140dp"
+                    android:layout_height="30dp"
+                    android:layout_marginTop="20dp"
+                    android:background="@drawable/btn_design"
+                    android:drawableLeft="@drawable/ic_refresh_blue_24px"
+                    android:fontFamily="@font/notosanscjkkrregular"
+                    android:gravity="center"
+                    android:includeFontPadding="false"
+                    android:stateListAnimator="@null"
+                    android:text="다른 추천 보기"
+                    android:textColor="@color/textColor_default_light"
+                    android:textSize="@dimen/my_text_size1"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/child2_recommend3" />
 
-        <TextView
-            android:id="@+id/child2_txt4"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="35dp"
-            android:layout_marginTop="18dp"
-            android:fontFamily="@font/notosanscjkkrregular"
-            android:includeFontPadding="false"
-            android:text="@string/string_child2_txt4"
-            android:textColor="@color/textColor_default"
-            android:textSize="@dimen/my_text_size1"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
 
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </ScrollView>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/child2_switch_container"
@@ -256,10 +265,6 @@
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
